[package]
name = "regex_static"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex_static_macro = { path = "./macro" }
regex = "1.4.3"
once_cell = "1.7.2"

[workspace]
members = [
  "impl",
  "macro",
]