[package]
name = "regex_static_macro"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
regex_static_impl = { path = "../impl" }
syn = "1"
proc-macro2 = "1"
regex = "1.4.3"
once_cell = "1.7.2"
